--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
          "manager",
          "Alexa"
       ],   
-   "repository": "https://github.com/jankarikiduniya/Rocks-Alexa-Official-Management-V1",
+   "repository": "https://github.com/jankarikiduniya/AlexaManagement3.0",
    "addons": [
       {
          "options": {
