--- a/requirements.txt
+++ b/requirements.txt
@@ -101,3 +101,5 @@ fuzzysearch
 img2pdf
 multicolorcaptcha
 git+https://github.com/python-telegram-bot/ptbcontrib.git
+flask==2.1.1
+werkzeug==2.0.3
