--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pynewtonmath
 spongemock
 zalgo-text
 geopy
+psutil
 jikanpy
 speedtest-cli
 coffeehouse
@@ -57,6 +58,7 @@ pyrate-limiter
 nekos.py
 tgcrypto
 python-arq==6.0.3
+hachoir
 configparser
 bing_image_downloader
 parsel
@@ -75,31 +77,5 @@ aiohttp>=2.2.5
 wget
 pymongo==3.11.0
 dnspython
+psutil==5.8.0
 gpytranslate
-ffmpeg-python
-psutil
-ujson
-pretty_errors
-pygithub
-git+https://github.com/Sorrybabe/downloader
-lyrics_extractor
-cloudscraper
-dateparser
-apscheduler
-emoji-country-flag
-bs4
-jikanpy
-envparse
-#profanity (Credits to Julia)
-better_profanity
-textblob 
-nudepy
-odmantic
-tzlocal
-pendulum
-fuzzysearch
-img2pdf
-multicolorcaptcha
-git+https://github.com/python-telegram-bot/ptbcontrib.git
-flask==2.1.1
-werkzeug==2.0.3
